--- a/index.html
+++ b/index.html
@@ -335,8 +335,8 @@
 								<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://www.linkedin.com/in/tim-shang-hao-huang-9aa3a89a/" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="huangtim30@hotmail.com.tw" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
-							</ul>
+								<li><a href="mailto:huangtim30@hotmail.com.tw?subject=your title&body=The message" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+                            </ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
 					</footer>
@@ -344,7 +344,7 @@
 			</div>
 
             
-        <div id="ytplayer"></div>
+        <div id="ytplayer" align="center"></div>
         
         <script>
           // Load the IFrame Player API code asynchronously.
@@ -358,8 +358,8 @@
           var player;
           function onYouTubePlayerAPIReady() {
             player = new YT.Player('ytplayer', {
-              height: '720',
-              width: '1280',
+              height: '360',
+              width: '640',
               videoId: 'M7lc1UVf-VE'
             });
           }
