--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
                             height: '360',
                             width: '640',
                             videoId: 'M7lc1UVf-VE',
-                            horizontal-align: middle;
-                            vertical-align: middle
+                            horizontal-align: 'middle',
+                            vertical-align: 'middle'
                         });
                     }
                 </script>
